# good-first-issue

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: linter.yml
alembic/: env.py
alembic/versions/: 7a6fd1cdf6ab_create_issue_and_repository_tables.py
app/: config.py  custom_errors.py  main.py  models.py  requests_builder.py
app/tests/: test_requests_builder.py
poetry-project/: pyproject.toml
