[tool.poetry]
name = "poetry-env"
version = "0.1.0"
description = ""
authors = ["Sergei Bogolepov <bogolepovsergei1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^20.3.0"
gino = "^1.0.1"
alembic = "^1.4.2"
psycopg2 = "^2.8.5"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
